--- a/style.css
+++ b/style.css
@@ -76,8 +76,8 @@ header, footer {
     align-items: center;
 }
 
-img {
-    padding-top: 30px;
+img.logo {
+    margin-top: 50px;
     height: 100px;
     width: 100px;
 }
@@ -110,12 +110,15 @@ li,a {
     height: 40px;
     width: 350px;
     color: white;
-    border-radius: 25px;
     display: flex;
     align-items: center;
     justify-content: center;
     padding: 5px 0;
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif ;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    border-bottom: 3px solid #ffa093;
+    box-shadow: inset 0 -4px 0 #0189d8;
+    border-radius: 25px;
+    border: 2px solid black;
 }
 
 a, 
@@ -124,16 +127,13 @@ a:visited {
     color: white;
 }
 
-li:hover {
-    
-}
-
 a:hover {
-    height: 37px;
-    width: 345px;
+    /*height: 37px;
+    width: 345px;*/
     background-color: aqua;
     color: black;
 }
+
 /*///////////////////////////
 Icon Footer
 ///////////////////////////*/
